--- a/.workshop/build
+++ b/.workshop/build
@@ -18,12 +18,11 @@ echo "export PATH=\$PATH:\$GOROOT/bin:\$GOPATH/bin" >> ~/.bashrc
 mkdir -p $GOPATH/bin
 # install "dep"
 curl -L https://github.com/golang/dep/releases/download/v0.5.1/dep-linux-amd64 -o $GOPATH/bin/dep
+chmod 755 $GOPATH/bin/dep
 
 # install operator-sdk
 curl -L https://github.com/operator-framework/operator-sdk/releases/download/v0.7.0/operator-sdk-v0.7.0-x86_64-linux-gnu -o $HOME/odev/bin/operator-sdk
 chmod 755 $HOME/odev/bin/operator-sdk
-
-$GOPATH/bin/dep
 
 # setup git profile
 git config --global user.email "operator-sdk@example.com"
