Edit to build file

--- a/.workshop/build
+++ b/.workshop/build
@@ -9,10 +9,10 @@ set -eo pipefail
 mkdir -p $HOME/go/bin
 mkdir -p $HOME/go/pkg
 
-echo "export GOPATH=$HOME/go" >> ~/.bashrc
-echo "export GOBIN=$GOPATH/bin" >> ~/.bashrc
-echo "export PATH=\$PATH:\$GOROOT/bin:\$GOPATH/bin" >> ~/.bashrc
-. ~/.bashrc
+echo "export GOPATH=$HOME/go" >> ~/.bash_profile
+echo "export GOBIN=$GOPATH/bin" >> ~/.bash_profile
+echo "export PATH=\$PATH:\$GOROOT/bin:\$GOPATH/bin" >> ~/.bash_profile
+# . ~/.bash_profile
 
 # install "dep"
 curl -L https://github.com/golang/dep/releases/download/v0.5.1/dep-linux-amd64 -o $GOPATH/bin/dep
